--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,10 +7,8 @@ services:
       dockerfile: Dockerfile.dev
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=db
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     networks:
@@ -29,12 +27,6 @@ services:
       ]
     volumes:
       - .:/app
-    environment:
-      - DEBUG=1
-      - DB_HOST=db
-      - DB_NAME=postgres
-      - DB_USER=postgres
-      - DB_PASS=postgres
     env_file:
       - .env
     ports:
