--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,10 +23,10 @@ jobs:
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r ./backend/requirements.txt
       - name: coverage tests
         run: |
           pip install coverage
-          coverage manage.py test
+          coverage ./backend/manage.py test
           coverage report
 
