--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,21 +12,21 @@ on:
 jobs:
   build:
 
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     step:
-      - uses: actions/checkout@v2
-      - name: setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.10
-      - name: install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r ./backend/requirements.txt
-      - name: coverage tests
-        run: |
-          pip install coverage
-          coverage ./backend/manage.py test
-          coverage report
+    - uses: actions/checkout@v2
+    - name: setup python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.10
+    - name: install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r ./backend/requirements.txt
+    - name: coverage tests
+      run: |
+        pip install coverage
+        coverage ./backend/manage.py test
+        coverage report
 
