--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,10 +11,8 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    step:
+    steps:
     - uses: actions/checkout@v2
     - name: setup python
       uses: actions/setup-python@v2
