--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,12 +14,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    step:
-    - uses: actions/checkout@v2
+    steps:
+    - uses: actions/checkout@v3
     - name: setup python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: '3.10.0'
     - name: install dependencies
       run: |
         python -m pip install --upgrade pip
