--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
     - name: install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ./backend/requirements.txt
+        pip install -r requirements.txt
     - name: coverage tests
       run: |
         pip install coverage
