--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,10 @@
 name: Django Tests
 
+# Enable Buildkit and let compose use it to speed up image building
+env:
+  DOCKER_BUILDKIT: 1
+  COMPOSE_DOCKER_CLI_BUILD: 1
+
 on:
   push:
     branches:
@@ -24,9 +29,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: coverage tests
-      run: |
-        pip install coverage
-        coverage ./backend/manage.py test
-        coverage report
+    - name: Build the Stack
+      run:  docker-compose -f ./backend/docker-compose.yml build
 
+    - name: Run DB Migrations
+      run:  docker-compose -f ./backend/docker-compose.yml run --rm backend python manage.py migrate
+
+    - name: Run Django Tests
+      run:  docker-compose -f ./backend/docker-compose.yml run --rm backend python manage.py test
+
+    - name: Tear down the Stack
+      run:  docker-compose -f ./backend/docker-compose.yml down
