--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,13 +30,15 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Build the Stack
-      run:  docker-compose -f ./backend/docker-compose.yml build
+      run:  |
+        cd ./backend
+        docker-compose -f ./docker-compose.yml build
 
     - name: Run DB Migrations
-      run:  docker-compose -f ./backend/docker-compose.yml run --rm backend python manage.py migrate
+      run:  docker-compose -f ./docker-compose.yml run --rm backend python manage.py migrate
 
     - name: Run Django Tests
-      run:  docker-compose -f ./backend/docker-compose.yml run --rm backend python manage.py test
+      run:  docker-compose -f ./docker-compose.yml run --rm backend python manage.py test
 
     - name: Tear down the Stack
-      run:  docker-compose -f ./backend/docker-compose.yml down
+      run:  docker-compose -f ./docker-compose.yml down
