upd github actions tests

--- a/backend/.env_template
+++ b/backend/.env_template
@@ -1,8 +1,8 @@
-SECRET_KEY=
-POSTGRES_DB=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-DB_HOST=
-DB_NAME=
-DB_USER=
-DB_PASS=
+SECRET_KEY=django-lskdjflksdjflskdjflskdjflsdkjdfllsdkfj
+POSTGRES_DB=db
+POSTGRES_USER=postgres_test
+POSTGRES_PASSWORD=postgres_test
+DB_HOST=db
+DB_NAME=postgres_test
+DB_USER=postgres_test
+DB_PASS=postgres_test
