--- a/backend/docker-test.yml
+++ b/backend/docker-test.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
     env_file:
-      - .env
+      - .env_template
     ports:
       - "5432:5432"
     networks:
@@ -26,7 +26,7 @@ services:
     volumes:
       - .:/app
     env_file:
-      - .env
+      - .env_template
     ports:
       - "8000:8000"
     depends_on:
