--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,10 +35,16 @@ jobs:
         docker-compose -f ./docker-test.yml build
 
     - name: Run DB Migrations
-      run:  docker-compose -f ./docker-test.yml run --rm backend python manage.py migrate
+      run:  |
+      cd ./backend
+      docker-compose -f ./docker-test.yml run --rm backend python manage.py migrate
 
     - name: Run Django Tests
-      run:  docker-compose -f ./docker-test.yml run --rm backend python manage.py test
+      run:  |
+      cd ./backend
+      docker-compose -f ./docker-test.yml run --rm backend python manage.py test
 
     - name: Tear down the Stack
-      run:  docker-compose -f ./docker-test.yml down
+      run:  |
+      cd ./backend
+      docker-compose -f ./docker-test.yml down
