mod env template

--- a/backend/.env_template
+++ b/backend/.env_template
@@ -1,8 +1,8 @@
 SECRET_KEY=django-lskdjflksdjflskdjflskdjflsdkjdfllsdkfj
 POSTGRES_DB=db
-POSTGRES_USER=postgres_test
-POSTGRES_PASSWORD=postgres_test
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 DB_HOST=db
-DB_NAME=postgres_test
-DB_USER=postgres_test
-DB_PASS=postgres_test
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASS=postgres
