--- a/backend/docker-test.yml
+++ b/backend/docker-test.yml
@@ -9,6 +9,13 @@ services:
       - .env_template
     ports:
       - "5432:5432"
+
+    # Set health checks to wait until postgres has started
+    options: >-
+      --health-cmd pg_isready
+      --health-interval 10s
+      --health-timeout 5s
+      --health-retries 5
     networks:
       - main
   backend:
