upd docker-test.yml

--- a/backend/docker-test.yml
+++ b/backend/docker-test.yml
@@ -9,13 +9,6 @@ services:
       - .env_template
     ports:
       - "5432:5432"
-
-    # Set health checks to wait until postgres has started
-    options: >-
-      --health-cmd pg_isready
-      --health-interval 10s
-      --health-timeout 5s
-      --health-retries 5
     networks:
       - main
   backend:
@@ -24,7 +17,7 @@ services:
       dockerfile: Dockerfile.dev
     command:
       [
-        "./wait-for-postgres.sh",
+        "./app/wait-for-postgres.sh",
         "python",
         "/app/manage.py",
         "runserver",
