upd github actions tests

--- a/backend/.env_template
+++ b/backend/.env_template
@@ -2,7 +2,7 @@ SECRET_KEY=django-lskdjflksdjflskdjflskdjflsdkjdfllsdkfj
 POSTGRES_DB=db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-DB_HOST=localhost
+DB_HOST=db
 DB_NAME=postgres
 DB_USER=postgres
 DB_PASS=postgres
