--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,9 +6,7 @@ env:
   COMPOSE_DOCKER_CLI_BUILD: 1
 
 on:
-  push:
-    branches:
-      - main
+  [push]
 
 #on:
 #  schedule:
@@ -27,6 +25,7 @@ jobs:
         python-version: '3.10'
     - name: install dependencies
       run: |
+        cd ./backend
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Build the Stack
