--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -95,9 +95,9 @@ jobs:
       - name: Build and Push Container
         run: |-
           cd ./backend
-          gcloud auth configure-docker europe-north1-docker.pkg.dev
-          docker build -t "image0" ./
-          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:image0"
+          #gcloud auth configure-docker europe-north1-docker.pkg.dev
+          docker build -t europe-north-1-docker.pkg.dev/pioneering-tome-381209/myartifactrepo/myimage:latest ./
+          docker push europe-north-1-docker.pkg.dev/pioneering-tome-381209/myartifactrepo/myimage:latest
 
       # END - Docker auth and build
 
