--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ coverage==7.2.1
 Django==4.1.6
 django-cors-headers==3.13.0
 djangorestframework==3.14.0
+djangorestframework-gis==1.0.0
 djangorestframework-simplejwt==5.2.2
 gunicorn==20.1.0
 psycopg2-binary==2.9.5
