--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -45,8 +45,8 @@
 name: Build and Deploy to Cloud Run
 
 on:
-  push:
-    branches: [ "main" ]
+  # push:
+    # branches: [ "main" ]
 
 env:
   PROJECT_ID: pioneering-tome-381209 # TODO: update Google Cloud project id
